===== CHANGELOG =====
Zollern Galaxy v2.0.24
=====================

* Added planet Vortex, a super-storm planet.
* 